--- a/index.html
+++ b/index.html
@@ -3,29 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Web Studio</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="header-logo" href="./index.html"
+          >Web<span class="accent">Studio</span></a
+        >
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a class="header-link" href="">Studio</a></li>
+          <li><a class="header-link" href="">Portfolio</a></li>
+          <li><a class="header-link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero-section">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-button" type="button">Order Service</button>
       </section>
 
       <!-- Our features -->
@@ -33,29 +50,29 @@
         <h2>Our features</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="features-title">Strategy</h3>
+            <p class="features-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="features-title">Punctuality</h3>
+            <p class="features-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="features-title">Diligence</h3>
+            <p class="features-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="features-title">Technologies</h3>
+            <p class="features-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -65,54 +82,111 @@
 
       <!-- Our Team -->
       <section>
-        <h2>Our Team</h2>
+        <h2 class="section-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-card">
             <img
               src="./images/mark.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="person-name">Mark Guerrero</h3>
+            <p class="person-job">Product Designer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/tom.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="person-name">Tom Ford</h3>
+            <p class="person-job">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/camila.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="person-name">Camila Garcia</h3>
+            <p class="person-job">Marketing</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/daniel.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="person-name">Daniel Wilson</h3>
+            <p class="person-job">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Our Portfolio -->
+      <section>
+        <h2 class="section-title">Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/banking-app.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3 class="project-title">Banking App</h3>
+            <p class="project-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/cashless-payment.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h3 class="project-title">Cashless Payment</h3>
+            <p class="project-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/meditation-app.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+            <h3>Meditation App</h3>
+            <p class="project-text">App</p>
+          </li>
+          <li>
+            <img src="./images/taxi-service.jpg" alt="Taxi Service" />
+            <h3 class="project-title">Taxi Service</h3>
+            <p class="project-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/screen-illustrations.jpg"
+              alt="Screen Illustrations"
+            />
+            <h3 class="project-title">Screen Illustrations</h3>
+            <p class="project-text">Design</p>
+          </li>
+          <li>
+            <img src="./images/online-courses.jpg" alt="Online Courses" />
+            <h3>Online Courses</h3>
+            <p class="project-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a class="footer-logo" href="./index.html"
+        >Web<span class="accent">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
