add class project-card

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <section>
         <h2 class="section-title">Our Portfolio</h2>
         <ul>
-          <li>
+          <li class="project-card">
             <img
               src="./images/banking-app.jpg"
               alt="Banking App"
