--- a/index.html
+++ b/index.html
@@ -23,18 +23,22 @@
           >Web<span class="accent">Studio</span></a
         >
         <ul>
-          <li><a class="header-link" href="">Studio</a></li>
+          <li><a class="header-link" href="./index.html">Studio</a></li>
           <li><a class="header-link" href="">Portfolio</a></li>
           <li><a class="header-link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts">
         <ul>
           <li>
-            <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contacts-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="contacts-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -81,7 +85,7 @@
       </section>
 
       <!-- Our Team -->
-      <section>
+      <section class="team-section">
         <h2 class="section-title">Our Team</h2>
         <ul>
           <li class="team-card">
@@ -158,11 +162,16 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
+            <h3 class="project-title">Meditation App</h3>
             <p class="project-text">App</p>
           </li>
           <li>
-            <img src="./images/taxi-service.jpg" alt="Taxi Service" />
+            <img
+              src="./images/taxi-service.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
             <h3 class="project-title">Taxi Service</h3>
             <p class="project-text">Marketing</p>
           </li>
@@ -170,19 +179,26 @@
             <img
               src="./images/screen-illustrations.jpg"
               alt="Screen Illustrations"
+              width="360"
+              height="300"
             />
             <h3 class="project-title">Screen Illustrations</h3>
             <p class="project-text">Design</p>
           </li>
           <li>
-            <img src="./images/online-courses.jpg" alt="Online Courses" />
-            <h3>Online Courses</h3>
+            <img
+              src="./images/online-courses.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h3 class="project-title">Online Courses</h3>
             <p class="project-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a class="footer-logo" href="./index.html"
         >Web<span class="accent">Studio</span></a
       >
